--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
