--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.10.0",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
+    "streamifier": "^0.1.1",
     "winston": "^3.17.0"
   }
 }
