--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
+    "redis": "^4.7.0",
     "streamifier": "^0.1.1",
     "winston": "^3.17.0"
   }
