--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
     "redis": "^4.7.0",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "winston": "^3.17.0"
   }
