--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment-timezone": "^0.5.47",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
