--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
+    "stripe": "^18.3.0",
     "winston": "^3.17.0"
   }
 }
