--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
     "supertest": "^7.1.4"
