--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,34 +1,45 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: CI del Servidor (Node.js)
 
 on:
   push:
-    branches: [ "main", "develop" ] 
+    branches: [ "main", "develop" ]
   pull_request:
-    branches: [ "main", "develop" ] 
-  workflow_dispatch: 
+    branches: [ "main", "develop" ]
+  workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
+
+    strategy:
+      matrix:
+        node-version: [16, 18, 20]
+
     steps:
       - name: Checkout del código
         uses: actions/checkout@v4
 
-   
-      - name: Configurar Node.js v18
+      - name: Configurar Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: ${{ matrix.node-version }}
 
-    
-      - name: Instalar dependencias (npm install)
-        run: npm install
+      - name: Cachear dependencias
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-    
-      - name: Ejecutar Pruebas (npm test)
-        run: npm test
+      - name: Instalar dependencias
+        run: npm ci
+
+      - name: Ejecutar Pruebas
+        run: npm test -- --coverage
+
+      - name: Subir reporte de cobertura
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage/lcov.info
+          fail_ci_if_error: true
