--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Servidor del alquiladora romero",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "start": "node index.js"
   },
   "author": "edilberto",
