--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "csrf": "^3.1.0",
     "csurf": "^1.11.0",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-list-endpoints": "^7.1.1",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -38,6 +39,7 @@
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "stripe": "^18.3.0",
+    "web-push": "^3.6.7",
     "winston": "^3.17.0"
   },
   "devDependencies": {
