--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
     "redis": "^4.7.0",
+    "resend": "^6.4.2",
     "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "stripe": "^18.3.0",
